Edit index.html and recipes/InstantPot_Taco_Chicken.html and img/chickenTaco.jpg

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>World Class Recipes</h1>
         <a href="recipes/salmon.html">Salmon with Sour Cream Dill Sauce</a>
+        <br>
+        <a href="../odin-recipes/recipes/InstantPot_Taco_Chicken.html">Shreded Chicken Tacos</a>
     </body>
 </html>
