--- a/recipes/InstantPot_Taco_Chicken.html
+++ b/recipes/InstantPot_Taco_Chicken.html
@@ -5,6 +5,16 @@
         <meta charset="uft-8">
     </header>
     <body>
-        
+        <h1>InstantPot Taco Chicken</h1>
+        <br>
+        <img src="../img/chickenTaco.jpg" alt="Chicken Tacos">
+        <br>
+        <p>
+            These fantastic shreded chicken tacos are a fun, healty, and fast week night dinner that can be done in around 30 minues!
+        </p>
+        <br>
+        <p>
+            
+        </p>
     </body>
 </html>
