--- a/recipes/InstantPot_Taco_Chicken.html
+++ b/recipes/InstantPot_Taco_Chicken.html
@@ -13,8 +13,19 @@
             These fantastic shreded chicken tacos are a fun, healty, and fast week night dinner that can be done in around 30 minues!
         </p>
         <br>
+        <h3>Ingredients</h3>
+        <br>
         <p>
-            
+           <ul>
+               <li>Three boneless skinless chicken brests</li>
+               <li>8oz for your favorite salsa</li>
+               <li>One cup of chicken broth</li>
+               <li>Teaspoon of cumin</li>
+               <li>Teaspoon of chili powder</li>
+               <li>Half teaspoon of garlic powder</li>
+               <li>Half teaspoonof onion powder</li>
+               <li>Salt and pepper to taste</li>
+           </ul> 
         </p>
     </body>
 </html>
