--- a/recipes/InstantPot_Taco_Chicken.html
+++ b/recipes/InstantPot_Taco_Chicken.html
@@ -15,7 +15,7 @@
         <br>
         <h3>Ingredients</h3>
         <br>
-        <p>
+        
            <ul>
                <li>Three boneless skinless chicken brests</li>
                <li>8oz for your favorite salsa</li>
@@ -26,6 +26,17 @@
                <li>Half teaspoonof onion powder</li>
                <li>Salt and pepper to taste</li>
            </ul> 
-        </p>
+           <br>
+           <h3>Instructions</h3>
+           <br>
+           <ol>
+                <li>Lay your chicken brests side up in your InstantPot and season with salt, pepper, and all spices. a</li>
+                <li>Pour in chicken broth and salsa.</li>
+                <li>Cover lid, press the presure cook option on high.(This depends on your InstantPot intructions.)</li>
+                <li>Close steam valuve and set timer for 14 minues.</li>
+                <li>After InstantPot has naturaly realiesed shreed chicken and enjoy!</li>
+            </ol>
+
+        
     </body>
 </html>
