recipes/InstantPot_Taco_Chicken.html

--- a/recipes/InstantPot_Taco_Chicken.html
+++ b/recipes/InstantPot_Taco_Chicken.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
+    <head>
         <title>InstantPot Taco Chicken</title>
         <meta charset="uft-8">
-    </header>
+    </head>
     <body>
         <h1>InstantPot Taco Chicken</h1>
         <br>
