Edit index.html and recipes/InstantPot_Taco_Chicken.html and recipes/salmon.html and recipes/slow_cooker_ham_and_bean_soup.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <a href="recipes/salmon.html">Salmon with Sour Cream Dill Sauce</a>
         <br>
         <a href="../odin-recipes/recipes/InstantPot_Taco_Chicken.html">Shreded Chicken Tacos</a>
+        <br>
+        <a href="../odin-recipes/recipes/slow_cooker_ham_and_bean_soup.html">Slow Cooker Ham Bean Soup</a>
     </body>
 </html>
