--- a/recipes/InstantPot_Taco_Chicken.html
+++ b/recipes/InstantPot_Taco_Chicken.html
@@ -36,6 +36,9 @@
                 <li>Close steam valuve and set timer for 14 minues.</li>
                 <li>After InstantPot has naturaly realiesed shreed chicken and enjoy!</li>
             </ol>
+            <br>
+            <a href="file:///Users/nicholasyoung/Desktop/repos/odin-recipes/index.html">Return Home</a>
+        
 
         
     </body>
