--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -35,6 +35,5 @@
            <li>Enjoy!</li>
         </ol>
         <br>
-        <a href="file:///Users/nicholasyoung/Desktop/repos/odin-recipes/index.html">Return to homepage</a>
-    </body>
+        <a href="file:///Users/nicholasyoung/Desktop/repos/odin-recipes/index.html">Retuen Home</a>
 </html>
