--- a/recipes/slow_cooker_ham_and_bean_soup.html
+++ b/recipes/slow_cooker_ham_and_bean_soup.html
@@ -8,7 +8,9 @@
         <h1>Slow Cooker Ham and Bean Soup</h1>
         <br>
         <p>
-            
+            This hearthy ham and bead soup recipe is perfect for cold winter nights. Add a crusty baguette and a simple arugula salad 
         </p>
+        <br>
+        <a href="file:///Users/nicholasyoung/Desktop/repos/odin-recipes/index.html">Retuen home</a>
     </body>
 </html>
