Edit img/hamsoup.jpg and recipes/slow_cooker_ham_and_bean_soup.html and recipes/slow_cooker_ham_and_bean_soup.html

--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -15,7 +15,8 @@
             dinner that your family will love.  
        </p>
        <br>
-
+       <h3>Ingredients</h3>
+       <br>
        <ul>
            <li>Two 8oz salmon fillets</li>
            <li>Four tablespoons of sour cream</li>
