--- a/recipes/slow_cooker_ham_and_bean_soup.html
+++ b/recipes/slow_cooker_ham_and_bean_soup.html
@@ -7,10 +7,27 @@
     <body>
         <h1>Slow Cooker Ham and Bean Soup</h1>
         <br>
+        <img src="../img/hamsoup.jpg">
         <p>
-            This hearthy ham and bead soup recipe is perfect for cold winter nights. Add a crusty baguette and a simple arugula salad 
+            This hearthy ham and bead soup recipe is perfect for cold winter nights. Add a crusty baguette and a simple arugula salad. 
         </p>
         <br>
-        <a href="file:///Users/nicholasyoung/Desktop/repos/odin-recipes/index.html">Retuen home</a>
+        <h3>Equipment</h3>
+        
+        <ul>
+            <li>Slow Cooker or Crock Pot over 4 qts.</li>
+        </ul>
+        <br>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1lbs. dry great northern or navy beans.</li>
+            <li>3-4lbs. smoked ham shank.</li>
+            <li>1 whole white or yellow onion.</li>
+            <li>3-4 stalks of celery.</li>
+            <li>salt and pepper to taste.</li>
+            <li>Water to fill.</li>
+        </ul>
+
+        <a href="file:///Users/nicholasyoung/Desktop/repos/odin-recipes/index.html">Return home</a>
     </body>
 </html>
