Edit recipes/salmon.html and recipes/slow_cooker_ham_and_bean_soup.html

--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -27,6 +27,7 @@
            <li>One tablespoon of high temp oil. Canola, walnut, or avacado</li>
        </ul>
        <br>
+       <h3>Directions</h3>
        <ol>
            <li>In a bowl mix sourcream, mustard,  teaspoon dill, salt and pepper to taste. Chill</li>
            <li>Add a little oil to salmon then season with rest of dill, salt and pepper to taste</li>
