--- a/recipes/slow_cooker_ham_and_bean_soup.html
+++ b/recipes/slow_cooker_ham_and_bean_soup.html
@@ -27,6 +27,16 @@
             <li>salt and pepper to taste.</li>
             <li>Water to fill.</li>
         </ul>
+        <br>
+        <h3>Directions</h3>
+        <ol>
+            <li>Fine dice onion and celery</li>
+            <li>In slow cooker or Crock Pot put in ham shank, beans, onions and celery, peper to taste. Cover with Water</li>
+            <li>Cook on high for four hours. Cook on low for six to eight hours.</li>
+            <li>Remove ham shank bone shreed meat and return to pot.</li>
+            <li>Add salt to taste as ham shank is already salty.</li>
+            <li>Enjoy!</li>
+        </ol>
 
         <a href="file:///Users/nicholasyoung/Desktop/repos/odin-recipes/index.html">Return home</a>
     </body>
